fix alignment of skills

--- a/style.css
+++ b/style.css
@@ -83,11 +83,11 @@ margin-top: 30px;
     height: 60px;
 }
 
-.skill-icon i:hover {
+/* .skill-icon i:hover {
 color: #007bff;
 transform: scale(1.2);
 transition: 0.3s;
-}
+} */
 
 footer {
 text-align: center;
